; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/atm/extr_ueagle-atm.c_uea_write_cmv_e4.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/atm/extr_ueagle-atm.c_uea_write_cmv_e4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uea_softc = type { i32 }

@E4_MEMACCESS = common dso_local global i32 0, align 4
@E4_REQUESTWRITE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"writing cmv failed with error %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.uea_softc*, i32, i32, i32, i32, i32)* @uea_write_cmv_e4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uea_write_cmv_e4(%struct.uea_softc* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca %struct.uea_softc*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.uea_softc* %0, %struct.uea_softc** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %14 = load %struct.uea_softc*, %struct.uea_softc** %7, align 8
  %15 = load i32, i32* @E4_MEMACCESS, align 4
  %16 = load i32, i32* @E4_REQUESTWRITE, align 4
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @E4_MAKEFUNCTION(i32 %15, i32 %16, i32 %17)
  %19 = load i32, i32* %9, align 4
  %20 = load i32, i32* %10, align 4
  %21 = load i32, i32* %11, align 4
  %22 = load i32, i32* %12, align 4
  %23 = call i32 @uea_cmv_e4(%struct.uea_softc* %14, i32 %18, i32 %19, i32 %20, i32 %21, i32 %22)
  store i32 %23, i32* %13, align 4
  %24 = load i32, i32* %13, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %26, label %31

26:                                               ; preds = %6
  %27 = load %struct.uea_softc*, %struct.uea_softc** %7, align 8
  %28 = call i32 @INS_TO_USBDEV(%struct.uea_softc* %27)
  %29 = load i32, i32* %13, align 4
  %30 = call i32 @uea_err(i32 %28, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %29)
  br label %31

31:                                               ; preds = %26, %6
  %32 = load i32, i32* %13, align 4
  ret i32 %32
}

declare dso_local i32 @uea_cmv_e4(%struct.uea_softc*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @E4_MAKEFUNCTION(i32, i32, i32) #1

declare dso_local i32 @uea_err(i32, i8*, i32) #1

declare dso_local i32 @INS_TO_USBDEV(%struct.uea_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
